# react-native-openharmony-svg

./: .gitignore  OAT.xml  README.OpenSource  README.md
example/: app.json  index.js  package-lock.json  package.json
example/apps/examples/: App.tsx
example/apps/examples/src/: examples.tsx
example/harmony/: .clang-format  build-profile.template.json5  oh-package-lock.json5  oh-package.json5
example/harmony/entry/: oh-package-lock.json5  oh-package.json5
example/harmony/entry/src/main/: module.json5
example/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
example/harmony/entry/src/main/ets/: PackageProvider.ets
example/svgDemoCases/components/issueTests/: Issue308.tsx
package/: LICENSE  package-lock.json  package.json
package/harmony/: svg.har
package/harmony/svg/: oh-package-lock.json5  oh-package.json5
package/harmony/svg/src/main/cpp/: FontHolderBase.cpp  SvgArkUINode.cpp  SvgArkUINode.h  SvgCircle.h  SvgDefs.h  SvgGradient.cpp  SvgGradient.h  SvgGraphic.cpp  SvgHost.h  SvgImage.h  SvgMarker.h  SvgMask.cpp  SvgMask.h  SvgNode.cpp  SvgNode.h  SvgPath.cpp  SvgPattern.h  SvgSvg.cpp  SvgSymbol.cpp  SvgTSpan.cpp  (+5 more)
react-native-harmony-svg/: package-lock.json  package.json
react-native-harmony-svg/harmony/: svg.har
tester/: package.json
tester/harmony/: build-profile.template.json5  oh-package.json5
tester/harmony/entry/: oh-package-lock.json5  oh-package.json5
tester/harmony/svg/: oh-package.json5  ts.ts
tester/svgDemoCases/components/: Image.tsx  IssueFix.tsx
tester/svgDemoCases/components/issueTests/: Issue324.tsx
(+200 files in other folders)
